[gd_scene load_steps=36 format=3 uid="uid://wju6gq1ayjcc"]

[ext_resource type="Script" path="res://main.cs" id="1_ls1pd"]
[ext_resource type="Texture2D" uid="uid://ch06moskwywow" path="res://placeholder bg.png" id="1_vrwm4"]
[ext_resource type="Script" path="res://GameScript.gd" id="2_g2ocd"]
[ext_resource type="Texture2D" uid="uid://ds7825neqnicv" path="res://idle 1.png" id="2_lrl2s"]
[ext_resource type="Texture2D" uid="uid://c5x4k7egu1p3v" path="res://button 1.png" id="3_fi8o8"]
[ext_resource type="Texture2D" uid="uid://bk5i4tvprgq8v" path="res://idle 2.png" id="3_hu1ky"]
[ext_resource type="Texture2D" uid="uid://bqtci6fnog4ss" path="res://button 1 pressed.png" id="4_76va1"]
[ext_resource type="Texture2D" uid="uid://r1y8ubxvyhlx" path="res://idle 3.png" id="4_wwvky"]
[ext_resource type="Texture2D" uid="uid://buyklhg622noq" path="res://button 2.png" id="5_1vgyh"]
[ext_resource type="Texture2D" uid="uid://dpwflhmchj6vq" path="res://idle 4.png" id="5_58jj3"]
[ext_resource type="Texture2D" uid="uid://qh8e6vkheqrj" path="res://button 2 pressed.png" id="6_xv5y5"]
[ext_resource type="Texture2D" uid="uid://bmyd5awkd7nlh" path="res://hat idle 1.png" id="7_2sew4"]
[ext_resource type="Texture2D" uid="uid://bf1dts6pfs1wv" path="res://button 3.png" id="7_wvv1m"]
[ext_resource type="Texture2D" uid="uid://7u3pvkmkqpbh" path="res://hat idle 2.png" id="8_0llul"]
[ext_resource type="Texture2D" uid="uid://cxf6y08veippu" path="res://button 3 pressed.png" id="8_hyu5u"]
[ext_resource type="Texture2D" uid="uid://dkngbpjcr6vky" path="res://button 4.png" id="9_b2xak"]
[ext_resource type="Texture2D" uid="uid://btsm13jflomp3" path="res://hat idle 3.png" id="9_jva3s"]
[ext_resource type="Texture2D" uid="uid://ck4gt1yypsfue" path="res://hat idle 4.png" id="10_47qvt"]
[ext_resource type="Texture2D" uid="uid://d10wwvvnvaqex" path="res://button 4 pressed.png" id="10_qcpc1"]
[ext_resource type="Texture2D" uid="uid://b7vv8w7ca6mod" path="res://button 5.png" id="11_vwksm"]
[ext_resource type="Texture2D" uid="uid://dgf3hco6on4r7" path="res://sprites/petSprites/cat tail.png" id="12_2ejma"]
[ext_resource type="Script" path="res://CharacterSprites.gd" id="12_7v5x1"]
[ext_resource type="Texture2D" uid="uid://cptnesfq8eu8c" path="res://button 5 pressed.png" id="12_gsd18"]
[ext_resource type="Script" path="res://Character.gd" id="12_l3qf3"]
[ext_resource type="Texture2D" uid="uid://iqwt2aswppsq" path="res://sprites/petSprites/cat body.png" id="13_04m7e"]
[ext_resource type="Texture2D" uid="uid://d3css7bmrg6lv" path="res://sprites/petSprites/cat head.png" id="14_uw1gh"]
[ext_resource type="Texture2D" uid="uid://ddefbpj61isxk" path="res://money.png" id="16_p7ybc"]
[ext_resource type="Script" path="res://add_button.cs" id="17_42q57"]
[ext_resource type="Texture2D" uid="uid://bqfi5kyjfkban" path="res://button exit.png" id="20_6m7l3"]
[ext_resource type="Script" path="res://shopGridContainer.gd" id="26_jond8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_utqtj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ldtpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lrl2s")
}, {
"duration": 1.0,
"texture": ExtResource("3_hu1ky")
}, {
"duration": 1.0,
"texture": ExtResource("4_wwvky")
}, {
"duration": 1.0,
"texture": ExtResource("5_58jj3")
}, {
"duration": 1.0,
"texture": ExtResource("4_wwvky")
}, {
"duration": 1.0,
"texture": ExtResource("3_hu1ky")
}, {
"duration": 1.0,
"texture": ExtResource("2_lrl2s")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2sew4")
}, {
"duration": 1.0,
"texture": ExtResource("8_0llul")
}, {
"duration": 1.0,
"texture": ExtResource("9_jva3s")
}, {
"duration": 1.0,
"texture": ExtResource("10_47qvt")
}, {
"duration": 1.0,
"texture": ExtResource("9_jva3s")
}, {
"duration": 1.0,
"texture": ExtResource("8_0llul")
}, {
"duration": 1.0,
"texture": ExtResource("7_2sew4")
}],
"loop": true,
"name": &"hat",
"speed": 4.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_w47ko"]
font_size = 50
font_color = Color(0.270588, 0.0784314, 0.0784314, 1)

[sub_resource type="CSharpScript" id="CSharpScript_36qwx"]
script/source = "using Godot;
using System;

public partial class shop : VSplitContainer
{
	// Called when the node enters the scene tree for the first time.
	public override void _Ready()
	{
	}
	

	// Called every frame. 'delta' is the elapsed time since the previous frame.
	public override void _Process(double delta)
	{
	}
}
"

[sub_resource type="LabelSettings" id="LabelSettings_gxtp8"]
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="BaseNode" type="Node"]
script = ExtResource("1_ls1pd")

[node name="GameScript" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_g2ocd")

[node name="TextureRect" type="TextureRect" parent="GameScript"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -225.5
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vrwm4")

[node name="CatCharacterBody2D" type="CharacterBody2D" parent="GameScript"]
unique_name_in_owner = true
visible = false
position = Vector2(0, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameScript/CatCharacterBody2D"]
shape = SubResource("CapsuleShape2D_utqtj")

[node name="catsprite" type="AnimatedSprite2D" parent="GameScript/CatCharacterBody2D"]
unique_name_in_owner = true
position = Vector2(398, 644)
sprite_frames = SubResource("SpriteFrames_ldtpr")
animation = &"hat"
autoplay = "default"

[node name="Character" type="Node2D" parent="GameScript"]
script = ExtResource("12_l3qf3")

[node name="CharacterSprites" type="Node2D" parent="GameScript/Character"]
unique_name_in_owner = true
script = ExtResource("12_7v5x1")

[node name="tail" type="Sprite2D" parent="GameScript/Character/CharacterSprites"]
unique_name_in_owner = true
position = Vector2(400, 771.5)
texture = ExtResource("12_2ejma")

[node name="body" type="Sprite2D" parent="GameScript/Character/CharacterSprites"]
unique_name_in_owner = true
position = Vector2(400, 771.5)
texture = ExtResource("13_04m7e")

[node name="bodyAccessory" type="Sprite2D" parent="GameScript/Character/CharacterSprites"]
unique_name_in_owner = true
position = Vector2(400, 771.5)

[node name="head" type="Sprite2D" parent="GameScript/Character/CharacterSprites"]
unique_name_in_owner = true
position = Vector2(400, 771.5)
texture = ExtResource("14_uw1gh")

[node name="headAccessory" type="Sprite2D" parent="GameScript/Character/CharacterSprites"]
unique_name_in_owner = true
position = Vector2(400, 771.5)

[node name="HBoxContainer" type="HBoxContainer" parent="GameScript"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -164.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Button1" type="TextureButton" parent="GameScript/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fi8o8")
texture_pressed = ExtResource("4_76va1")
texture_hover = ExtResource("4_76va1")

[node name="Button2" type="TextureButton" parent="GameScript/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1vgyh")
texture_pressed = ExtResource("6_xv5y5")
texture_hover = ExtResource("6_xv5y5")

[node name="Button3" type="TextureButton" parent="GameScript/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_wvv1m")
texture_pressed = ExtResource("8_hyu5u")
texture_hover = ExtResource("8_hyu5u")

[node name="Button4" type="TextureButton" parent="GameScript/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_b2xak")
texture_pressed = ExtResource("10_qcpc1")
texture_hover = ExtResource("10_qcpc1")

[node name="Button5" type="TextureButton" parent="GameScript/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("11_vwksm")
texture_pressed = ExtResource("12_gsd18")
texture_hover = ExtResource("12_gsd18")

[node name="TextureRect2" type="TextureRect" parent="GameScript"]
offset_right = 292.0
offset_bottom = 110.0
texture = ExtResource("16_p7ybc")

[node name="MoneyLabel" type="Label" parent="GameScript"]
unique_name_in_owner = true
offset_left = 26.0
offset_top = 22.0
offset_right = 268.0
offset_bottom = 91.0
text = "150"
label_settings = SubResource("LabelSettings_w47ko")
horizontal_alignment = 1

[node name="addButton" type="TextureButton" parent="GameScript"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 164.0
grow_horizontal = 0
texture_normal = ExtResource("3_fi8o8")
texture_pressed = ExtResource("4_76va1")
script = ExtResource("17_42q57")

[node name="shop" type="VSplitContainer" parent="GameScript"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("CSharpScript_36qwx")

[node name="HBoxContainer" type="HBoxContainer" parent="GameScript/shop"]
layout_mode = 2
theme_override_constants/separation = 490

[node name="Label" type="Label" parent="GameScript/shop/HBoxContainer"]
layout_mode = 2
text = "Shop"
label_settings = SubResource("LabelSettings_gxtp8")

[node name="shopExitButton" type="TextureButton" parent="GameScript/shop/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("20_6m7l3")

[node name="ScrollContainer" type="ScrollContainer" parent="GameScript/shop"]
layout_mode = 2

[node name="shopGridContainer" type="GridContainer" parent="GameScript/shop/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("26_jond8")

[connection signal="pressed" from="GameScript/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="GameScript/HBoxContainer/Button1" to="GameScript" method="_on_button_1_pressed"]
[connection signal="pressed" from="GameScript/HBoxContainer/Button2" to="GameScript" method="_on_button_2_pressed"]
[connection signal="pressed" from="GameScript/addButton" to="GameScript" method="_on_add_button_pressed"]
[connection signal="pressed" from="GameScript/shop/HBoxContainer/shopExitButton" to="GameScript" method="_on_shop_exit_button_pressed"]
